# bedder-rs

./: .dockerignore  .gitignore  CHANGES.md  Cargo.toml  LICENSE  README.md  build.rs  docs.sh  pyo3-config.txt
.cargo/: config.toml
.github/workflows/: build-static.yml  build-staticx.yml  docs.yml  release.yml  rust.yml  static-linux.yml
benches/: random_intervals.rs
ci/: build.rs.ci
docker/: Dockerfile.alpine-static  Dockerfile.gnu-static  README.md  build-static.sh  codex-login.sh
examples/: expressions.rs  intersect.rs  intersect_bed_count.rs
src/: bed_ex.rs  bedder_bed.rs  bedder_vcf.rs  chrom_ordering.rs  column.rs  formatting.rs  genome_file.rs  glibc_shims.rs  hts_format.rs  intersection.rs  intersections.rs  interval.rs  lib.rs  lua_wrapper.rs  main.rs  position.rs  py.rs  py_test.rs  report.rs  report_options.rs  skip.rs  sniff.rs  string.rs  writer.rs
src/cli/: closest.rs  full.rs  intersect.rs  map.rs  mod.rs  shared.rs
src/tests/: mod.rs  parse_intersections.rs
tests/: a.bed  b.bed  hg38.small.fai  integration_a_piece_whole.rs  integration_map.rs  integration_python_columns.rs  integration_skip_position.rs  map_a.bed  map_a_nohit.bed  map_a_noname.bed  map_b.bed  map_b.vcf  map_b_missing_dp.vcf  map_b_noname.bed  map_b_numeric_name.bed  map_ops.py  skip_position_test_db.bed  skip_position_test_fai  skip_position_test_query.bed  test-ab.py  test.bam  test.bed  test.sam
tests/examples/: README.md  aa.bed  bb.bed  example.py  fake.fai
