[package]
name = "bedder"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bedder"
path = "src/lib.rs"

[[bin]]
name = "bedder"
path = "src/main.rs"


[dependencies]
rand = "0.8.5"
smartstring = { version = "1.0.1", optional = true }
smol_str = { version = "0.2.0", optional = true }
compact_str = { version = "0.7.0", optional = true }
kstring = { version = "2.0.0", optional = true }
noodles = { version = "0.85.0" }
flate2 = "1.0.26"
clap = { version = "4.2.7", features = ['derive'] }
env_logger = "0.10.0"
log = "0.4.19"
linear-map = "1.2.0"
hashbrown = "0.14.0"
xvcf = { git = "https://github.com/brentp/xvcf-rs", tag = "v0.2.4" }
mimalloc = "0.1.39"
bitflags = "2.4.0"
# use rust-htslilb from xvcf
bio = { git = "https://github.com/brentp/rust-bio.git", branch = "bed-next" }
tempfile = "3.14.0"


[features]
default = ["bed", "csi", "core", "bam", "sam", "bgzf"]
bam = ["noodles/bam"]
bed = ["noodles/bed"]
bgzf = ["noodles/bgzf"]
#cram = ["noodles/cram"]
sam = ["noodles/sam"]
csi = ["noodles/csi"]
core = ["noodles/core"]
# allow a Box<dyn Positioned> in the enum to support user-specified types.
dyn_positioned = []

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
clap = { version = "4.5.21", features = ["derive"] }
mlua = {version = "0.9.9", features=["luau", "send", "parking_lot"]}

[[bench]]
name = "random_intervals"
harness = false

[profile.release]
lto = true
