[package]
name = "bedder"
version = "0.1.1"
edition = "2021"
exclude = [
    "examples/expressions.rs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bedder"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "bedder"
path = "src/main.rs"


[dependencies]
rand = "0.8.5"
smartstring = { version = "1.0.1", optional = true }
smol_str = { version = "0.3.2", optional = true }
compact_str = { version = "0.9.0", optional = true }
kstring = { version = "2.0.0", optional = true }
noodles = { version = "0.97.0" }
flate2 = "1.0.26"
clap = { version = "4.2.7", features = ['derive'] }
env_logger = "0.11.8"
log = "0.4.19"
linear-map = "1.2.0"
hashbrown = "0.15.2"
mimalloc = "0.1.39"
#rust-htslib = { version = "0.49.0", features = ["libdeflate", "static"]}
rust-htslib = { git = "https://github.com/brentp/rust-htslib.git", rev = "645bb6f", features=["libdeflate", "static"] }
tempfile = "^3.14.0"
simplebed = { git = "https://github.com/brentp/simplebed-rs.git", version = "0.1.4" }
pyo3 = {version = "0.24.1", features=["auto-initialize"]}
pyo3-ffi = "0.24.1"
#mlua = {version = "0.10.3", features=["luau", "send"]}
parking_lot = {version="0.12.3"}


[features]
default = ["bed", "csi", "core", "bam", "sam", "bgzf"]
bam = ["noodles/bam"]
bed = ["noodles/bed"]
bgzf = ["noodles/bgzf"]
#cram = ["noodles/cram"]
sam = ["noodles/sam"]
csi = ["noodles/csi"]
core = ["noodles/core"]
# allow a Box<dyn Positioned> in the enum to support user-specified types.
dyn_positioned = []

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
clap = { version = "4.5.21", features = ["derive"] }

[[bench]]
name = "random_intervals"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
debug = true
[profile.dev.package."*"]
opt-level = 3
